GNOME Bugzilla – Bug 662055
Software update tool should not auto-close when there is "nothing" to update.
Last modified: 2011-10-18 09:31:55 UTC
Today (Fedora Core 15) when the software updater detects that everything is up to date, it auto closes. It could present a problem. This is what happened to me. One of my machines was on FC13. At some point it stopped receiving updates (time to update to FC14) and I had not installed FC14 yet. FC14 was displayed for a while as an available new-distro update, but I hesitated to upgrade to it due to compatibility worries. As FC13 updates stopped coming and my machine was up to date, software update dialog would always auto-close not giving me a chance to go and migrate to a new distro version! I had to perform a manual upgrade from command line. While workable, this is less than optimal especially for a non-technical people. I have no idea if the behavior is still the same on the latest builds. However from what I see on FC15, the dialog still auto-closes when there are no updates to install. I would have to wait until FC15 is obsolete to verify it. The solution: don't auto-close or at least don't do it if there is a new-distro is available.
commit 09dfa47d4f4ad3f024c167c4f632a383beccd190 Author: Richard Hughes <richard@hughsie.com> Date: Tue Oct 18 10:31:10 2011 +0100 Don't autoclose when no updates but distro upgrades are available Resolves https://bugzilla.gnome.org/show_bug.cgi?id=662055