Don't autoclose when no updates but distro upgrades are available

Resolves https://bugzilla.gnome.org/show_bug.cgi?id=662055